; ModuleID = '/home/carl/AnghaBench/timescaledb/src/extr_hypertable.c_ts_hypertable_scan_with_memory_context.c'
source_filename = "/home/carl/AnghaBench/timescaledb/src/extr_hypertable.c_ts_hypertable_scan_with_memory_context.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@Anum_hypertable_name_idx_schema = common dso_local global i32 0, align 4
@BTEqualStrategyNumber = common dso_local global i32 0, align 4
@F_NAMEEQ = common dso_local global i32 0, align 4
@Anum_hypertable_name_idx_table = common dso_local global i32 0, align 4
@HYPERTABLE_NAME_INDEX = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ts_hypertable_scan_with_memory_context(i8* %0, i8* %1, i32 %2, i8* %3, i32 %4, i32 %5, i32 %6) #0 {
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca [2 x i32], align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  store i8* %0, i8** %8, align 8
  store i8* %1, i8** %9, align 8
  store i32 %2, i32* %10, align 4
  store i8* %3, i8** %11, align 8
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store i32 %6, i32* %14, align 4
  %18 = load i8*, i8** %8, align 8
  %19 = call i32 @namestrcpy(i32* %16, i8* %18)
  %20 = load i8*, i8** %9, align 8
  %21 = call i32 @namestrcpy(i32* %17, i8* %20)
  %22 = getelementptr inbounds [2 x i32], [2 x i32]* %15, i64 0, i64 0
  %23 = load i32, i32* @Anum_hypertable_name_idx_schema, align 4
  %24 = load i32, i32* @BTEqualStrategyNumber, align 4
  %25 = load i32, i32* @F_NAMEEQ, align 4
  %26 = call i32 @NameGetDatum(i32* %16)
  %27 = call i32 @ScanKeyInit(i32* %22, i32 %23, i32 %24, i32 %25, i32 %26)
  %28 = getelementptr inbounds [2 x i32], [2 x i32]* %15, i64 0, i64 1
  %29 = load i32, i32* @Anum_hypertable_name_idx_table, align 4
  %30 = load i32, i32* @BTEqualStrategyNumber, align 4
  %31 = load i32, i32* @F_NAMEEQ, align 4
  %32 = call i32 @NameGetDatum(i32* %17)
  %33 = call i32 @ScanKeyInit(i32* %28, i32 %29, i32 %30, i32 %31, i32 %32)
  %34 = getelementptr inbounds [2 x i32], [2 x i32]* %15, i64 0, i64 0
  %35 = load i32, i32* @HYPERTABLE_NAME_INDEX, align 4
  %36 = load i32, i32* %10, align 4
  %37 = load i8*, i8** %11, align 8
  %38 = load i32, i32* %12, align 4
  %39 = load i32, i32* %13, align 4
  %40 = load i32, i32* %14, align 4
  %41 = call i32 @hypertable_scan_limit_internal(i32* %34, i32 2, i32 %35, i32 %36, i8* %37, i32 1, i32 %38, i32 %39, i32 %40)
  ret i32 %41
}

declare dso_local i32 @namestrcpy(i32*, i8*) #1

declare dso_local i32 @ScanKeyInit(i32*, i32, i32, i32, i32) #1

declare dso_local i32 @NameGetDatum(i32*) #1

declare dso_local i32 @hypertable_scan_limit_internal(i32*, i32, i32, i32, i8*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
